# eaupourtous

./: .env.example  .gitignore  backup.json  celerybeat-schedule-shm  celerybeat-schedule-wal  main.py  manage.py  pyproject.toml
devis/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
devis/migrations/: 0001_initial.py  0002_remove_lignedevis_devis_alter_devis_objet_and_more.py  0003_client_alter_devis_client.py  0004_alter_devis_statut_alter_lignedevis_quantite.py  0005_alter_lignedevis_prix_unitaire.py  0006_alter_client_email.py  0007_rapport.py
devis/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
devis/templates/devis/: devis_confirm_delete.html  devis_detail.html  devis_form.html  devis_list.html  devis_update.html  pdf_template.html
devis/templates/rapports/: formulaire.html  liste_rapports.html
eau/: admin.py  apps.py  context_processors.py  forms.py  models.py  sitemaps.py  tasks.py  translation.py  urls.py  views.py
eau/migrations/: 0001_initial.py  0002_avis_message_en_avis_message_fr_and_more.py  0003_client.py  0004_delete_client.py
eau/templates/: 404.html  base.html  base_dashboard.html  index.html
eau/templates/eau/: dashboard.html  login.html
eau/templates/emails/: contact_email.html
eau/templates/includes/: footer.html  (+1 more)
eaupourtous/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
maintenance/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
maintenance/migrations/: 0001_initial.py
static/: robots.txt
static/css/: style.css
static/js/: main.js
(+12 files in other folders)
